# SCP

./: README.md  db.sqlite3  pyproject.toml
cage/: admin.py  models.py  urls.py  views.py
cage/migrations/: 0001_initial.py  0002_auto_20200624_1631.py  0003_auto_20200624_2319.py  0004_monster_date.py  0005_auto_20200626_1009.py
cage/settings/: base.py  heroku.py  local.py
cage/static/: main.css
cage/templates/: base.html
cage/templates/cage/: index.html  locations.html  profile.html  sightings.html
cage/templates/registration/: login.html
myproject/: requirements.txt  settings.py  urls.py
