[tool.poetry]
name = "scp_project"
version = "0.1.0"
description = ""
authors = ["jinxbunny <info@jmkit.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
pillow = "^7.1.2"
gunicorn = "^20.0.4"
whitenoise = "^5.1.0"
python-decouple = "^3.3"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
